cards1_DATA = 01c.png 01d.png 01h.png 01s.png 02c.png 02d.png 02h.png 02s.png 03c.png 03d.png \
	03h.png 03s.png 04c.png 04d.png 04h.png 04s.png 05c.png 05d.png 05h.png 05s.png 06c.png \
	06d.png 06h.png 06s.png 07c.png 07d.png 07h.png 07s.png 08c.png 08d.png 08h.png 08s.png \
	09c.png 09d.png 09h.png 09s.png 10c.png 10d.png 10h.png 10s.png 11c.png 11d.png 11h.png \
	11s.png 12c.png 12d.png 12h.png 12s.png 13c.png 13d.png 13h.png 13s.png index.desktop   

cards1dir = $(kde_datadir)/carddecks/cards-xskat-french
