decks_DATA = deck0.png deck1.png deck2.png deck3.png deck4.png deck5.png deck6.png \
	deck7.png deck8.png deck9.png deck10.png deck11.png \
	deck0.desktop deck1.desktop deck2.desktop deck3.desktop deck4.desktop deck5.desktop deck6.desktop \
	deck7.desktop deck8.desktop deck9.desktop deck10.desktop deck11.desktop

decksdir = $(kde_datadir)/carddecks/decks
