decks_DATA = deck0.desktop deck0.png deck1.desktop deck1.png deck10.desktop deck10.png deck11.desktop \
	deck11.png deck12.desktop deck12.png deck13.desktop deck13.png deck14.desktop deck14.png \
	deck15.desktop deck15.png deck16.desktop deck16.png deck17.desktop deck17.png deck2.desktop \
	deck2.png deck3.desktop deck3.png deck4.desktop deck4.png deck5.desktop deck5.png deck6.desktop \
	deck6.png deck7.desktop deck7.png deck8.desktop deck8.png deck9.desktop deck9.png deck18.png \
	deck18.desktop deck19.png deck19.desktop deck20.desktop deck20.png deck21.desktop deck21.png \
	deck22.desktop deck22.png deck23.desktop deck23.png

decksdir = $(kde_datadir)/carddecks/decks
